// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation action creators handleDeepLink should extract the route name and param from the URL 1`] = `
Array [
  Object {
    "type": "SET_LOADING",
    "value": true,
  },
  Object {
    "type": "SET_DEEP_LINK_LOADING",
    "value": true,
  },
  Object {
    "type": "SET_DEEP_LINK_FLAG",
    "value": true,
  },
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mock",
  },
]
`;

exports[`Navigation action creators handleDeepLink should not atttempt to parse if route was not correct 1`] = `
Array [
  Object {
    "type": "SET_LOADING",
    "value": true,
  },
]
`;
